fixed date input with a span to be visible on mobiles

--- a/src/pages/HistoryPage/HistoryPage.module.css
+++ b/src/pages/HistoryPage/HistoryPage.module.css
@@ -52,6 +52,22 @@
   color: var(--text) !important;
 }
 
+.dateWrapper {
+  position: relative;
+  width: fit-content;
+}
+
+.dateFormat {
+  color: var(--text) !important;
+  background: var(--panou);
+  top: 50%;
+  transform: translateY(-55%);
+  right: 27%;
+  position: absolute;
+  /* font-size: 12px; */
+  z-index: 1;
+}
+
 .resetButton {
   background: var(--panou);
   color: #eee;
